Allow using locators for classes inherited from WebElement

--- a/tests/fixtures/test_web_elements_fixture.html
+++ b/tests/fixtures/test_web_elements_fixture.html
@@ -5,24 +5,60 @@
     </head>
     <body>
         <div class="book">
-            <div class="title">Harry Potter and the Philosopher's Stone</div>
-            <div class="author">J. K. Rowling</div>
-            <div class="isbn">0747532699</div>
+            <div class="title">
+                <span class='field-name'>Title: </span>
+                <span class='field-value'>Harry Potter and the Philosopher's Stone</span>
+            </div>
+            <div class="author">
+                <span class="field-name">Author: </span>
+                <span class="field-value">J. K. Rowling</span>
+            </div>
+            <div class="isbn">
+                <span class="field-name">ISBN: </span>
+                <span class="field-value">0747532699</span>
+            </div>
         </div>
         <div class="book">
-            <div class="title">The Lord of the Rings: The Fellowship of the Ring</div>
-            <div class="author">J. R. R. Tolkien</div>
-            <div class="isbn">9789172632936</div>
+            <div class="title">
+                <span class="field-name">Title: </span>
+                <span class="field-value">The Lord of the Rings: The Fellowship of the Ring</span>
+            </div>
+            <div class="author">
+                <span class="field-name">Author: </span>
+                <span class="field-value">J. R. R. Tolkien</span>
+            </div>
+            <div class="isbn">
+                <span class="field-name">ISBN: </span>
+                <span class="field-value">9789172632936</span>
+            </div>
         </div>
         <div class="book">
-            <div class="title">The Da Vinci Code</div>
-            <div class="author">Dan Brown</div>
-            <div class="isbn">0385504209</div>
+            <div class="title">
+                <span class="field-name">Title: </span>
+                <span class="field-value">The Da Vinci Code</span>
+            </div>
+            <div class="author">
+                <span class="field-name">Author: </span>
+                <span class="field-value">Dan Brown</span>
+            </div>
+            <div class="isbn">
+                <span class="field-name">ISBN: </span>
+                <span class="field-value">0385504209</span>
+            </div>
         </div>
         <div class="book">
-            <div class="title">The Catcher in the Rye</div>
-            <div class="author">Jerome David Salinger</div>
-            <div class="isbn">7543321726</div>
+            <div class="title">
+                <span class="field-name">Title: </span>
+                <span class="field-value">The Catcher in the Rye</span>
+            </div>
+            <div class="author">
+                <span class="field-name">Author: </span>
+                <span class="field-value">Jerome David Salinger</span>
+            </div>
+            <div class="isbn">
+                <span class="field-name">ISBN: </span>
+                <span class="field-value">7543321726</span>
+            </div>
         </div>
     </body>
 </html>
