Add tests for intercating with webpage

--- a/tests/fixtures/test_web_elements_fixture.html
+++ b/tests/fixtures/test_web_elements_fixture.html
@@ -2,6 +2,17 @@
 <html>
     <head>
         <title>Page Title</title>
+        <style>
+            .book {
+                border: 1px solid red;
+                margin: 5px;
+                padding: 5px;
+            }
+
+            .field-name {
+                width: 100px;
+            }
+        </style>
     </head>
     <body>
         <div class="book">
