Allow to locate many elements with the same selector using LocateMany

--- a/tests/fixtures/test_web_elements_fixture.html
+++ b/tests/fixtures/test_web_elements_fixture.html
@@ -12,6 +12,14 @@
             .field-name {
                 width: 100px;
             }
+
+            .chapters {
+                margin-top: 0px;
+            }
+            .contents {
+                margin-top: 16px;
+                margin-left: 16px;
+            }
         </style>
     </head>
     <body>
@@ -28,6 +36,14 @@
                 <span class="field-name">ISBN: </span>
                 <span class="field-value">0747532699</span>
             </div>
+            <div class="contents">
+                <span class="table-title">Table of contents:</span>
+                <ol>
+                    <li class="chapter">The boy who lived</li>
+                    <li class="chapter">The vanishing glass</li>
+                    <li class="chapter">...</li>
+                </ol>
+            </div>
         </div>
         <div class="book">
             <div class="title">
@@ -42,7 +58,16 @@
                 <span class="field-name">ISBN: </span>
                 <span class="field-value">9789172632936</span>
             </div>
+            <div class="contents">
+                <span class="table-title">Table of contents:</span>
+                <ol class="chapters">
+                    <li class="first-chapter">A Long-expected Party</li>
+                    <li class="second-chapter">The shadow of the Past</li>
+                    <li class="third-chapter">...</li>
+                </ol>
+            </div>
         </div>
+
         <div class="book">
             <div class="title">
                 <span class="field-name">Title: </span>
@@ -56,7 +81,16 @@
                 <span class="field-name">ISBN: </span>
                 <span class="field-value">0385504209</span>
             </div>
+            <div class="contents">
+                <span class="table-title">Table of contents:</span>
+                <ol class="chapters">
+                    <li class="first-chapter">Chapter 1</li>
+                    <li class="second-chapter">Chapter 2</li>
+                    <li class="third-chapter">...</li>
+                </ol>
+            </div>
         </div>
+
         <div class="book">
             <div class="title">
                 <span class="field-name">Title: </span>
@@ -69,6 +103,14 @@
             <div class="isbn">
                 <span class="field-name">ISBN: </span>
                 <span class="field-value">7543321726</span>
+            </div>
+            <div class="contents">
+                <span class="table-title">Table of contents:</span>
+                <ol class="chapters">
+                    <li class="first-chapter">Chapter 1</li>
+                    <li class="second-chapter">Chapter 2</li>
+                    <li class="third-chapter">...</li>
+                </ol>
             </div>
         </div>
     </body>
