Implement getting attribute's values from multiple located webelements

--- a/tests/fixtures/test_web_elements_fixture.html
+++ b/tests/fixtures/test_web_elements_fixture.html
@@ -44,6 +44,7 @@
                     <li class="chapter">...</li>
                 </ol>
             </div>
+            <p class="avibility">Aviable</p>
         </div>
         <div class="book">
             <div class="title">
@@ -61,11 +62,12 @@
             <div class="contents">
                 <span class="table-title">Table of contents:</span>
                 <ol class="chapters">
-                    <li class="first-chapter">A Long-expected Party</li>
-                    <li class="second-chapter">The shadow of the Past</li>
-                    <li class="third-chapter">...</li>
+                    <li class="chapter">A Long-expected Party</li>
+                    <li class="chapter">The shadow of the Past</li>
+                    <li class="chapter">...</li>
                 </ol>
             </div>
+            <p class="avibility">Aviable</p>
         </div>
 
         <div class="book">
@@ -84,11 +86,12 @@
             <div class="contents">
                 <span class="table-title">Table of contents:</span>
                 <ol class="chapters">
-                    <li class="first-chapter">Chapter 1</li>
-                    <li class="second-chapter">Chapter 2</li>
-                    <li class="third-chapter">...</li>
+                    <li class="chapter">Chapter 1</li>
+                    <li class="chapter">Chapter 2</li>
+                    <li class="chapter">...</li>
                 </ol>
             </div>
+            <p class="avibility">Not aviable</p>
         </div>
 
         <div class="book">
@@ -107,11 +110,12 @@
             <div class="contents">
                 <span class="table-title">Table of contents:</span>
                 <ol class="chapters">
-                    <li class="first-chapter">Chapter 1</li>
-                    <li class="second-chapter">Chapter 2</li>
-                    <li class="third-chapter">...</li>
+                    <li class="chapter">Chapter 1</li>
+                    <li class="chapter">Chapter 2</li>
+                    <li class="chapter">...</li>
                 </ol>
             </div>
+            <p class="avibility">Aviable</p>
         </div>
     </body>
 </html>
