Allow to use values on DictElementWrapper

--- a/tests/fixtures/test_web_elements_fixture.html
+++ b/tests/fixtures/test_web_elements_fixture.html
@@ -39,9 +39,18 @@
             <div class="contents">
                 <span class="table-title">Table of contents:</span>
                 <ol>
-                    <li class="chapter">The boy who lived</li>
-                    <li class="chapter">The vanishing glass</li>
-                    <li class="chapter">...</li>
+                    <li class="chapter">
+                        <span class="title">The boy who lived</span>
+                        <span class="first-page">5</span>
+                    </li>
+                    <li class="chapter">
+                        <span class="title">The vanishing glass</span>
+                        <span class="first-page">32</span>
+                    </li>
+                    <li class="chapter">
+                        <span class="title">The letters from no one</span>
+                        <span class="first-page">45</span>
+                    </li>
                 </ol>
             </div>
             <p class="avibility">Aviable</p>
@@ -62,9 +71,18 @@
             <div class="contents">
                 <span class="table-title">Table of contents:</span>
                 <ol class="chapters">
-                    <li class="chapter">A Long-expected Party</li>
-                    <li class="chapter">The shadow of the Past</li>
-                    <li class="chapter">...</li>
+                    <li class="chapter">
+                        <span class="title">A Long-expected Party</span>
+                        <span class="first-page">3</span>
+                    </li>
+                    <li class="chapter">
+                        <span class="title">The shadow of the Past</span>
+                        <span class="first-page">17</span>
+                    </li>
+                    <li class="chapter">
+                        <span class="title">Three is Company</span>
+                        <span class="first-page">36</span>
+                    </li>
                 </ol>
             </div>
             <p class="avibility">Aviable</p>
@@ -86,9 +104,18 @@
             <div class="contents">
                 <span class="table-title">Table of contents:</span>
                 <ol class="chapters">
-                    <li class="chapter">Chapter 1</li>
-                    <li class="chapter">Chapter 2</li>
-                    <li class="chapter">...</li>
+                    <li class="chapter">
+                        <span class="title">Chapter 1</span>
+                        <span class="first-page">8</span>
+                    </li>
+                    <li class="chapter">
+                        <span class="title">Chapter 2</span>
+                        <span class="first-page">29</span>
+                    </li>
+                    <li class="chapter">
+                        <span class="title">Chapter 3</span>
+                        <span class="first-page">56</span>
+                    </li>
                 </ol>
             </div>
             <p class="avibility">Not aviable</p>
@@ -110,9 +137,18 @@
             <div class="contents">
                 <span class="table-title">Table of contents:</span>
                 <ol class="chapters">
-                    <li class="chapter">Chapter 1</li>
-                    <li class="chapter">Chapter 2</li>
-                    <li class="chapter">...</li>
+                    <li class="chapter">
+                        <span class="title">Chapter 1</span>
+                        <span class="first-page">6</span>
+                    </li>
+                    <li class="chapter">
+                        <span class="title">Chapter 2</span>
+                        <span class="first-page">29</span>
+                    </li>
+                    <li class="chapter">
+                        <span class="title">...</span>
+                        <span class="first-page">38</span>
+                    </li>
                 </ol>
             </div>
             <p class="avibility">Aviable</p>
